# pos_t2_aula_fastapi

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  horusec-config.json  main.py  openapi.json  pyproject.toml
.github/workflows/: deploy.yml  pre-commit.yml
api/: biblioteca_api.py  main.py  models.py  testes.ipynb  utils.py
api/routers/: auth_router.py  health_router.py  llm_router.py  operacoes_router.py  web_router.py
